Added GoodReaders API

--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -16,14 +16,9 @@
     <link rel="stylesheet" href="/css/styles.css">
     <!--endinject-->
 
-    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
-
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
@@ -110,7 +105,7 @@
                                     </h4></div>
                                 <div class="col-xs-3"></div>
                             </div>
-                            <br><br>
+                            <br><%=book.book.description%><br>
                         </div>
                     </div>
                     <hr>
