--- a/src/views/bookListView.ejs
+++ b/src/views/bookListView.ejs
@@ -102,11 +102,7 @@
                     <!--/books-->
                     <% for (var i=0; i<books.length; i++){%>
                         <div class="row">
-                            <br>
-                            <div class="col-md-2 col-sm-3 text-center">
-                                <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
-                            </div>
-                            <div class="col-md-10 col-sm-9">
+                            <div class="col-md-10 col-sm-9 col-sm-offset-2">
                                 <h3><%=books[i].title%></h3>
                                 <div class="row">
                                     <div class="col-xs-9">
